# solar-api-mock

./: .pre-commit-config.yaml  README.md  example.json  pyproject.toml
solar_api_mock/core/: main.py  properties.py  schema.py
solar_api_mock/core/properties/: __init__.py  base.py  building_insights.py  common.py  data_layers.py  financial_analysis.py  request_params.py  solar_potential.py  utils.py
solar_api_mock/web/: app.py
tests/: test_api_routes.py  test_core_routes.py
